--- a/Photorama/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Photorama/Base.lproj/Main.storyboard
@@ -56,6 +56,7 @@
                                         <connections>
                                             <outlet property="imageView" destination="GmW-RQ-a1x" id="wsX-2T-ZNf"/>
                                             <outlet property="spinner" destination="RwW-xs-sA5" id="0Lz-Rb-Pa4"/>
+                                            <segue destination="Pdu-dE-eSk" kind="show" identifier="ShowPhoto" id="lDx-oV-MJF"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -77,6 +78,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1117" y="359"/>
+        </scene>
+        <!--Photo Info View Controller-->
+        <scene sceneID="dc6-NX-X4E">
+            <objects>
+                <viewController id="Pdu-dE-eSk" customClass="PhotoInfoViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cto-ZM-4R1"/>
+                        <viewControllerLayoutGuide type="bottom" id="hU6-26-qnT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="alX-n6-77V">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tl9-H3-5Qp">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="tl9-H3-5Qp" secondAttribute="trailing" constant="-20" id="BeP-cY-43h"/>
+                            <constraint firstItem="tl9-H3-5Qp" firstAttribute="top" secondItem="cto-ZM-4R1" secondAttribute="bottom" id="Zlk-ve-6nc"/>
+                            <constraint firstItem="tl9-H3-5Qp" firstAttribute="leading" secondItem="alX-n6-77V" secondAttribute="leadingMargin" constant="-20" id="vB6-Nu-fCq"/>
+                            <constraint firstItem="hU6-26-qnT" firstAttribute="top" secondItem="tl9-H3-5Qp" secondAttribute="bottom" id="z6b-Gn-pFe"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="tl9-H3-5Qp" id="YSR-W1-hua"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h2s-5b-f0M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1315" y="1081"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="44u-cE-ibs">
